# openadapt-maintenance

./: .gitignore  README.md  SUMMARY_REPORT.md  mkdocs.yml  pyproject.toml  repos.yml
.github/workflows/: sync.yml  trigger.yml
docs/: architecture.md  changelog.md  index.md  whats-new.md
prompts/: architecture.txt  whats_new.txt
scripts/: aggregate_changelog.py  build_architecture.py  generate_whats_new.py  sync_readmes.py  validate_docs.py
templates/: package_page.md.j2  whats_new.md.j2
tests/: test_aggregate_changelog.py  test_generate_whats_new.py  test_sync_readmes.py  test_tidy_artifacts.py  test_validate_docs.py
tests/artifacts/generated_docs/: MANIFEST.txt  changelog.md  index.md  whats-new.md
tests/fixtures/: sample_changelog.md  sample_prs.json  sample_readme.md
tidy/: README.md  __main__.py  _config.py  _core.py  _github.py  _utils.py  patterns.example  tidy.py
tidy/artifacts/: __init__.py  _commands.py  base.py  docker_ghcr.py  github_actions.py  github_releases.py  pypi.py
